--- a/style.css
+++ b/style.css
@@ -1,3 +1,79 @@
-﻿body
-{
+﻿body {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: medium;
+    background-color: #ffffff;
+    color: #3f3f3f;
+    padding: 20px;
+}
+
+.quiz {
+    display: none;
+}
+
+.final {
+    display: none;
+}
+
+.button {
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+}
+
+button.green {
+    background-color: #4CAF50;
+}
+/* Green */
+button.blue {
+    background-color: #008CBA;
+}
+/* Blue */
+button.red {
+    background-color: #f44336;
+}
+/* Red */
+button.grey {
+    background-color: #e7e7e7;
+    color: black;
+}
+/* Gray */
+button.black {
+    background-color: #555555;
+}
+/* Black */
+
+.center {
+    display: flex;
+    justify-content: center;
+}
+
+hr {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.start, .final {
+    background-color: #eeeeee;
+    padding: 20px;
+    border-radius: 25px;
+}
+
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: #3b5998;
+    border-radius: 25px 25px 0 0;
+    color: #fff;
+}
+
+fieldset {
+    border: none;
+    padding: 15px 32px;
+    text-decoration: none;
+    background: #eeeeee;
+    border-radius: 0 0 25px 25px;
 }
