--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ hr {
     margin-bottom: 50px;
 }
 
-.start, .message .final {
+.start, .final {
     background-color: #eeeeee;
     padding: 20px;
     border-radius: 25px;
