--- a/style.css
+++ b/style.css
@@ -6,8 +6,23 @@
     padding: 20px;
 }
 
+.start-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.start-continer{
+    width: 70%;
+}
+
+.start-image {
+    width: 40%;
+}
+
 .quiz {
-    display: none;
+        display: none;
 }
 
 .final {
