--- a/style.css
+++ b/style.css
@@ -8,21 +8,20 @@
 
 .start-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
 
-.start-continer{
-    width: 70%;
-}
-
-.start-image {
-    width: 40%;
-}
-
 .quiz {
-        display: none;
+    display: none;
+}
+
+.quizheader {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .final {
@@ -92,3 +91,37 @@ fieldset {
     background: #eeeeee;
     border-radius: 0 0 25px 25px;
 }
+
+@media only screen and (min-width: 600px) {
+    .start-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .start-continer {
+        width: 70%;
+    }
+
+    .start-image {
+        width: 40%;
+    }
+
+    /*scoring board;*/
+    .quizheader {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .questionnumber {
+        width: 50%;
+    }
+
+    .score {
+        width: 50%;
+    }
+}
+
